optic/css/style.css
/* ... */
.slick-dots li {
  height: 6px;
  width: 6px;
  background-color: #333;
  border-radius: 50%;
  position: relative;
}

.slick-dots li::after {
  content: "";
  height: 12px;
  width: 12px;
  position: absolute;
  left: -3px;
  top: -3px;
  background-color: transparent;
  border-radius: 50%;
  -webkit-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
}

.slick-dots li button {
  font-size: 0;
}

.slick-dots .slick-active {
  background-color: #ff7900;
}

.slick-dots .slick-active::after {
  background-color: #ff7900;
}

.header__main {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  padding: 34px 0 30px;
  border-bottom: 1px solid #d9d9d9;
}

.header__contacts p {
  font-weight: 400;
  font-size: 16px;
  line-height: 1.87;
  color: #a1a1a1;
}

.header__contacts p a {
  font-weight: 700;
  color: #a1a1a1;
}

.header__logo {
  width: 195px;
  height: 72px;
}

.header__logo img {
  height: 100%;
  width: 100%;
  -o-object-fit: contain;
     object-fit: contain;
}

.header__button {
  width: 267px;
}

.header__nav .menu {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  gap: 55px;
  padding: 15px;
}

.header__nav .menu-item a {
  font-size: 16px;
  line-height: 1.75;
  color: #222831;
  font-weight: 700;
  -webkit-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
}

.header__nav .menu-item:last-of-type a,
.header__nav .menu-item:hover a {
  color: #ff7900;
}

.content {
  margin: 0 auto;
}

.footer {
  background-color: #333;
  padding-top: 50px;
}

.footer__content {
  position: relative;
}

.footer__wrapper {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 80px;
}

.footer__logo {
  margin-bottom: 13px;
}

.footer__logo img {
  height: 100%;
  width: 100%;
  -o-object-fit: contain;
     object-fit: contain;
}

.footer__column {
  -webkit-box-flex: 0;
      -ms-flex: 0 0 215px;
          flex: 0 0 215px;
}

.footer__column > p {
  font-size: 16px;
  line-height: 1.2;
  color: #868686;
  letter-spacing: .055em;
  padding-bottom: 30px;
  border-bottom: 1px solid #868686;
}

.footer__contacts {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  gap: 20px;
}

.footer__contacts a {
  color: #fff;
  font-weight: 700;
  font-size: 16px;
  line-height: 1.87;
}

.footer__workTime {
  margin: 14px 0 27px;
}

.footer__workTime p {
  font-size: 16px;
  line-height: 1.4;
  color: #868686;
  letter-spacing: .055em;
}

.footer__workTime p:first-of-type strong {
  font-weight: 700;
  color: #fff;
}

.footer__workTime p:last-of-type strong {
  color: #ff7900;
  font-weight: 700;
}

.footer__social {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 24px;
}

.footer__social a {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  background-color: #fff;
  border-radius: 50%;
  height: 44px;
  width: 44px;
  -webkit-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
}

.footer__social a:hover {
  background-color: #ff7900;
}

.footer__social a:hover span {
  color: #fff;
}

.footer__social a span {
  color: #333;
  font-size: 18px;
  position: relative;
  top: 2px;
  -webkit-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
}

.footer__social a:first-child span {
  right: 2px;
}

.footer__social a:last-child span {
  top: 3px;
}

.footer__form {
  position: absolute;
  right: -10px;
  bottom: 80px;
  width: 565px;
  padding: 85px 60px 90px;
  background-color: #ff7900;
  overflow: hidden;
}

.footer__form p {
  color: #fff;
  margin: 22px auto 40px;
  font-size: 20px;
  line-height: 1.5;
  text-align: center;
}

.footer__form::after,
.footer__form::before {
  content: "";
  border-radius: 50%;
  position: absolute;
  opacity: 0.11;
  z-index: 0;
}

.footer__form::before {
  height: 420px;
  width: 420px;
  border: 5px solid #fff;
  top: -185px;
  left: -95px;
}

.footer__form::after {
  height: 220px;
  width: 220px;
  border: 2px solid #fff;
  bottom: -120px;
  right: -40px;
}

.footer__heading {
  color: #fff;
  font-weight: 700;
  font-size: 40px;
  line-height: 1.2;
  text-align: center;
}

.footer__button {
  background-color: #fff;
  color: #ff7900;
  display: block;
  margin: 0 auto;
  -webkit-transition: all .5s;
  -o-transition: all .5s;
  transition: all .5s;
}

.footer__button:hover {
  cursor: pointer;
  opacity: 0.8;
}

.footer__copyright {
  padding: 8px 0 24px;
}

.footer__copyright p {
  font-size: 12px;
  line-height: 1.75;
  color: rgba(255, 255, 255, 0.4);
  text-align: right;
}

.footer__copyright p a {
  font-weight: 800;
  color: rgba(255, 255, 255, 0.6);
}

.advantages {
  padding: 52px 0 112px;
}

.advantages__list {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  gap: 62px;
}

.advantages__item {
  padding-left: 24px;
  position: relative;
}

.advantages__item::before {
  content: "";
  height: 80%;
  width: 3px;
  position: absolute;
  left: 0;
  top: 10%;
  background-color: #ff7900;
}

.advantages__item p {
  font-size: 14px;
  line-height: 2.14;
  color: #000;
}

.advantages__item p strong {
  font-weight: 700;
}
/* ... */

